# blog

./: .Rprofile  .gitignore  _quarto.yml  about.qmd  blog.Rproj  config.yaml  index.qmd  pyproject.toml  styles.css
articles/: Quarto.qmd  R.qmd
content/post/2022-02-25-blogdown-kotohajime/: index.Rmd
content/post/2022-03-12-lima-kotohajime/: index.Rmd
content/post/2022-04-18-facet-grid-switch-disables-strip-text-theming/: index.Rmd
posts/2022-02-25-blogdown事始め/: index.qmd
posts/2022-03-12-docker-for-macからlimaへの乗り換え/: index.qmd
posts/2022/2022-04-18-strip-angle-when-facet_grid-switch-y/: index.qmd
posts/2023-08-31-複数のfastqファイルをひとつのファイルにまとめる/: index.qmd
posts/2023-09-26-プロットに使う色について/: index.qmd
posts/2023-10-04-ヒートマップのセルの大きさ指定/: index.qmd
posts/2023/2023-09-26-colors-for-making-plots/: index.qmd
posts/2023/2023-09-26-quarto-helloworld/: index.qmd
posts/2023/2023-10-31-facet-labels-overflow/: index.qmd
posts/2024-02-15-python-hello-world/: index.qmd
posts/2024-02-17-一つのプロットで複数のスケール色を使う/: index.qmd
posts/2024-07-22-quarto-tips/: index.qmd
posts/2024-07-24-quarto-python-coding-tips/: index.qmd
posts/2024-07-24-quarto-r-coding-tips/: index.qmd  styles_reset.css
posts/2024-07-25-float-and-numpy/: index.qmd
posts/2024-07-25-positron-tips/: index.qmd
posts/2024-07-27-r-pipe1/: index.qmd
posts/2024-08-08-quarto-shortcode/: _something_content.qmd  index.qmd  styles_temp.css
posts/2024-08-08-sysconfigpatcher/: index.qmd
posts/2024-08-09-quarto-div-span/: index.qmd  styles_temp.css
src/blog/: __init__.py
(+17 files in other folders)
