[project]
name = "blog"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "t-arae", email = "aroearue@gmail.com" }
]
dependencies = [
    "jupyter>=1.0.0",
    "numpy>=2.0.1",
    "session-info>=1.0.0",
    "matplotlib>=3.9.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/blog"]
